--- a/src/components/Calculator.css
+++ b/src/components/Calculator.css
@@ -5,6 +5,7 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 2px;
+  padding: 3px;
 }
 
 .calc-display {
